# Tunai-scrapers

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
benchmarks/: enhanced_metrics.py  metrics.py  quality_metrics.py  runner.py
collectors/: collect_bettounsi.py  collect_derja_ninja.py  collect_facebook.py  collect_reddit.py  collect_tunisia_sat.py
tunai_scrapers/: README.md  __init__.py  config.py  items.py  mixins.py  pipeline_mixins.py  pipelines.py  settings.py
tunai_scrapers/spiders/: __init__.py  spider_base.py  spider_tunisia_sat.py
tunai_scrapers/utils/: text.py
